clang/test/BSC/Negative/OwnedStruct/impl-trait/impl-trait.cbs
// RUN: %clang_cc1 -verify %s

_Owned struct S { 
public:
  int a;
};

trait T { 
};

impl trait T for S;

void test1(S* sp) {
  trait T* t = sp;
}

void test2(S* _Owned sp) {
  trait T* _Owned t = sp;
} // expected-error {{field memory leak of value: `t`, t.data is leak}}

void test3(S* sp) {
  trait T* _Owned t = sp; // expected-error {{incompatible _Owned types, cannot cast '_Owned struct S *' to 'trait T *_Owned'}}
}

void test4(S* _Owned sp) {
  trait T* t = sp; // expected-error {{incompatible _Owned types, cannot cast '_Owned struct S *_Owned' to 'trait T *'}}
}